Adapted documentation, Code cleanup